Fix install of openresty, only in server mode.

--- a/bin/install
+++ b/bin/install
@@ -270,26 +270,26 @@ EOL
 # Install openresty:
 function install_openresty ()
 {
-  if [ "${mode}" == "server" ]; then
-    echo "Installing openresty required only by the server."
-    if [ -e "${prefix}/bin/resty" ]; then
-      echo "Openresty is already installed."
-      return
-    fi
-    echo "Installing openresty."
-    (
-      curl --location --silent -O https://openresty.org/download/ngx_openresty-1.9.3.1.tar.gz
-      tar xf ngx_openresty-1.9.3.1.tar.gz
-      cd ngx_openresty-1.9.3.1
-      ./configure --prefix="${prefix}" \
-                  --without-lua51 \
-                  --with-luajit="${rockstree}/5.1" \
-                  --with-ipv6 \
-                  --with-pcre-jit
-      make
-      make install
-    ) >> "${log}" 2>&1
+  if [ "${mode}" != "server" ]; then
+    return
   fi
+  if [ -e "${prefix}/bin/resty" ]; then
+    echo "Openresty is already installed."
+    return
+  fi
+  echo "Installing openresty."
+  (
+    curl --location --silent -O https://openresty.org/download/ngx_openresty-1.9.3.1.tar.gz
+    tar xf ngx_openresty-1.9.3.1.tar.gz
+    cd ngx_openresty-1.9.3.1
+    ./configure --prefix="${prefix}" \
+                --without-lua51 \
+                --with-luajit="${rockstree}/5.1" \
+                --with-ipv6 \
+                --with-pcre-jit
+    make -j"$(nproc)"
+    make install
+  ) >> "${log}" 2>&1
 }
 
 function install_luarocks ()
