--- a/bin/install
+++ b/bin/install
@@ -434,14 +434,17 @@ function install_main ()
 export PATH="${prefix}/bin:${rockstree}/5.1/bin:\${PATH}"
 export LUA_PATH="${rockstree}/5.1/share/lua/5.1/?.lua;${rockstree}/5.1/share/lua/5.1/?/init.lua"
 export LUA_CPATH="${rockstree}/5.1/lib/lua/5.1/?.so"
+export CPATH="${prefix}/include:${C_INCLUDE_PATH}"
+export LIBRARY_PATH="${prefix}/lib:${LD_LIBRARY_PATH}"
+export LD_LIBRARY_PATH="${prefix}/lib:${LD_LIBRARY_PATH}"
+
+export COSY_PREFIX="${prefix}"
 EOF
 
   cat > "${cli}" <<EOF
 #! /bin/sh
 
 ${paths}
-export COSY_PREFIX="${prefix}"
-
 ${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/cli/runner.lua "\$@"
 EOF
   chmod a+x "${cli}"
@@ -449,20 +452,17 @@ EOF
 if [ "${mode}" == "server" ]; then
   cat > "${server}" <<EOF
 #! /bin/sh
-  
+
 ${paths}
-export COSY_PREFIX="${prefix}"
-  
 ${rockstree}/5.1/bin/luajit ${rockstree}/5.1/share/lua/5.1/cosy/server/cli.lua "\$@"
 EOF
   chmod a+x "${server}"
 fi
-  
+
   cat > "${uninstall}" <<EOF
 #! /bin/bash
 
 ${paths}
-export COSY_PREFIX="${prefix}"
 if [ -e "${prefix}/bin/cosy-server" ]; then
   ${prefix}/bin/cosy-server stop --force
 fi
@@ -483,8 +483,6 @@ EOF
 #! /bin/bash
 
 ${paths}
-export COSY_PREFIX="${prefix}"
-
 (
   if [ \$# -ge 1 ]; then
     tmpdir=\${1}
@@ -507,8 +505,6 @@ EOF
 #! /bin/bash
 
 ${paths}
-export COSY_PREFIX="${prefix}"
-
 (
   if [ \$# -ge 1 ]; then
     tmpdir=\${1}
