--- a/bin/install
+++ b/bin/install
@@ -130,6 +130,8 @@ development="\
   lustache \
 "
 
+export CC=clang
+
 echo -e "Temporary directory: ${green}${tempwd}${nc}"
 echo -e "Log file           : ${green}${log}${nc}"
 echo -e "Mode               :  ${green}${mode}${nc}"
@@ -164,7 +166,7 @@ function install_dependencies ()
 
   if [ ! -z "${apt_available+x}" ]; then
     echo "Installing development packages."
-    sudo apt-get install --yes git make gcc diffutils patch curl unzip \
+    sudo apt-get install --yes git make clang diffutils patch curl unzip \
       >> "${log}" 2>&1
 
     if [ "${mode}" == "server" ]; then
