--- a/bin/install
+++ b/bin/install
@@ -630,8 +630,9 @@ if [ "${mode}" == "server" ]; then
   echo "- ${prefix}/bin/cosy-server start [--clean] [--force]"
   echo "- ${prefix}/bin/cosy-server stop  [--force]"
 fi
-echo "- ${prefix}/bin/cosy"
-echo "- ${prefix}/bin/cosy-uninstall"
+echo "- ${prefix}/bin/cosy            : to run the cosy client"
+echo "- ${prefix}/bin/cosy-version    : to get version number"
+echo "- ${prefix}/bin/cosy-uninstall  : to uninstall cosy"
 if [ ! -z "${sourcepath+x}" ] && [ "${mode}" != "client" ]; then
   echo "This development environment also provides two commands:"
   echo "- ${prefix}/bin/cosy-check    : to run checks, tests and coverage"
